Archive2/42/34846eb02d5d3c/output
main.cpp: In instantiation of ‘T&& strict_move(T&) [with T = const std::basic_string<char>]’:
main.cpp:21:39:   required from here
main.cpp:15:5: error: static assertion failed: parameter is const, would be copied instead of moved
     static_assert(!std::is_const<T>::value, "parameter is const, would be copied instead of moved");
     ^
